// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter should render 1`] = `
<div
  className="undefined"
>
  <span
    className="undefined"
  >
    Вирішено
  </span>
  <span
    className=""
  >
    12
  </span>
</div>
`;

exports[`Counter should work 1`] = `
<div
  className="counterBlock counterBlockActive"
>
  <span
    className="counterLabel counterLabelActive"
  >
    Заявок
  </span>
  <span
    className="counterCount counterCountTotal"
  >
    12
  </span>
</div>
`;
